<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_background_transparent"
    android:fillViewport="true"
    tools:context=".ForecastWeatherActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_forecast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_background_transparent"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_city_name_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="CIDADE" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_now_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/previsao_para_hoje"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_city_name_forecast" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_now_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_now_title"
                tools:text="21ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_now_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toStartOf="@id/textview_weather_now_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_now_temp"
                tools:text="Min 19ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_now_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@id/textview_weather_now_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_now_temp"
                tools:text="Max 25ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_one_day_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/previsao_para_amanha"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_now_min_temp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_one_day_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_one_day_title"
                tools:text="21ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_one_day_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toStartOf="@id/textview_weather_one_day_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_one_day_temp"
                tools:text="Min 19ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_one_day_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@id/textview_weather_one_day_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_one_day_temp"
                tools:text="Max 25ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_two_day_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/previsao_para_2_dias"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_one_day_min_temp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_two_day_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_two_day_title"
                tools:text="21ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_two_day_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toStartOf="@id/textview_weather_two_day_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_two_day_temp"
                tools:text="Min 19ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_two_day_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@id/textview_weather_two_day_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_two_day_temp"
                tools:text="Max 25ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_three_day_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/previsao_para_3_dias"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_two_day_min_temp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_three_day_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_three_day_title"
                tools:text="21ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_three_day_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toStartOf="@id/textview_weather_three_day_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_three_day_temp"
                tools:text="Min 19ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_three_day_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@id/textview_weather_three_day_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_three_day_temp"
                tools:text="Max 25ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_four_day_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/previsao_para_4_dias"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_three_day_min_temp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_four_day_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_four_day_title"
                tools:text="21ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_four_day_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toStartOf="@id/textview_weather_four_day_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_four_day_temp"
                tools:text="Min 19ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_four_day_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@id/textview_weather_four_day_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_four_day_temp"
                tools:text="Max 25ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_five_day_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/previsao_para_5_dias"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_four_day_min_temp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_five_day_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_five_day_title"
                tools:text="21ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_five_day_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toStartOf="@id/textview_weather_five_day_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_five_day_temp"
                tools:text="Min 19ºC" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_weather_five_day_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@id/textview_weather_five_day_temp"
                app:layout_constraintTop_toBottomOf="@id/textview_weather_five_day_temp"
                tools:text="Max 25ºC" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressbar_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
